@@ -160,6 +160,11 @@ If an error has occurred, the function <A HREF="api_misc.html#ErrorReporting">
 src_error</A> will return non-zero.
 </P>
 
+<P>
+See also :
+	<A HREF="api_full.html#SetRatio"><B>src_set_ratio</B></A>
+</P>
+
 <!-- pepper -->
 
 </DIV>
